Code editor integration

--- a/src/LogisimFX/resources/localization/gui.properties
+++ b/src/LogisimFX/resources/localization/gui.properties
@@ -166,3 +166,8 @@ splitVerticallyItem=Split vertically
 splitHorizontallyItem=Split horizontally
 selectNextTabItem=Select next tab
 selectPreviousTabItem=Select previous tab
+
+codeAreaSelectedTextInfo = chars
+codeAreaIndentInfo = %s spaces
+codeAreaReplaceBtn = Replace
+codeAreaReplaceAllBtn = Replace all
