--- a/src/LogisimFX/resources/localization/menu.properties
+++ b/src/LogisimFX/resources/localization/menu.properties
@@ -1,9 +1,11 @@
-frameTitle=LogisimFX
+editCantUndoItemframeTitle=LogisimFX
 
 # MenuEdit.java
 editMenu = Edit
 editCantUndoItem = Can't Undo
 editUndoItem = Undo %s
+editCantRedoItem = Can't Redo
+editRedoItem = Redo %s
 editCutItem = Cut
 editCopyItem = Copy
 editPasteItem = Paste
@@ -57,6 +59,8 @@ projectSetAsMainItem = Set As Main Circuit
 projectRemoveCircuitItem = Remove Circuit
 projectEditCircuitLayoutItem = Edit Circuit Layout
 projectEditCircuitAppearanceItem = Edit Circuit Appearance
+projectEditVerilogModelItem = Edit Verilog Model
+projectEditVHDLModelItem = Edit VHDL Model
 projectRevertAppearanceItem = Revert To Default Appearance
 projectAnalyzeCircuitItem = Analyze Circuit
 projectViewToolboxItem = View Toolbox
