--- a/src/LogisimFX/resources/localization/gui_ru.properties
+++ b/src/LogisimFX/resources/localization/gui_ru.properties
@@ -166,3 +166,9 @@ splitVerticallyItem=Разделить по вертикали
 splitHorizontallyItem=Разделить по горизонтали
 selectNextTabItem=Перейти к следующей вкладке
 selectPreviousTabItem=Перейти к предыдущей вкладке
+
+
+codeAreaSelectedTextInfo = символов
+codeAreaIndentInfo = %s пробела
+codeAreaReplaceBtn = Заменить
+codeAreaReplaceAllBtn = Заменить все
