--- a/src/LogisimFX/resources/localization/menu_ru.properties
+++ b/src/LogisimFX/resources/localization/menu_ru.properties
@@ -2,6 +2,8 @@
 editMenu= \u041f\u0440\u0430\u0432\u043a\u0430
 editCantUndoItem= \u041d\u0435\u0432\u043e\u0437\u043c\u043e\u0436\u043d\u043e \u043e\u0442\u043c\u0435\u043d\u0438\u0442\u044c
 editUndoItem= \u041e\u0442\u043c\u0435\u043d\u0438\u0442\u044c %s
+editCantRedoItem = Невозможно Вернуть
+editRedoItem = Вернуть %s
 editCutItem= \u0412\u044b\u0440\u0435\u0437\u0430\u0442\u044c
 editCopyItem= \u041a\u043e\u043f\u0438\u0440\u043e\u0432\u0430\u0442\u044c
 editPasteItem= \u0412\u0441\u0442\u0430\u0432\u0438\u0442\u044c
@@ -53,6 +55,8 @@ projectSetAsMainItem= \u0421\u0434\u0435\u043b\u0430\u0442\u044c \u0433\u043b\u0
 projectRemoveCircuitItem= \u0423\u0434\u0430\u043b\u0438\u0442\u044c \u0441\u0445\u0435\u043c\u0443
 projectEditCircuitLayoutItem= \u0420\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u0447\u0435\u0440\u0442\u0451\u0436 \u0441\u0445\u0435\u043c\u044b
 projectEditCircuitAppearanceItem= \u0420\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u0432\u043d\u0435\u0448\u043d\u0438\u0439 \u0432\u0438\u0434 \u0441\u0445\u0435\u043c\u044b
+projectEditVerilogModelItem = Редактировать Verilog модель
+projectEditVHDLModelItem = Редактировать VHDL модель
 projectRevertAppearanceItem= \u0412\u0435\u0440\u043d\u0443\u0442\u044c \u0432\u043d\u0435\u0448\u043d\u0438\u0439 \u0432\u0438\u0434 \u043f\u043e \u0443\u043c\u043e\u043b\u0447\u0430\u043d\u0438\u044e
 projectAnalyzeCircuitItem= \u0410\u043d\u0430\u043b\u0438\u0437\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u0441\u0445\u0435\u043c\u0443
 projectViewToolboxItem= \u041f\u043e\u043a\u0430\u0437\u0430\u0442\u044c \u0438\u043d\u0441\u0442\u0440\u0443\u043c\u0435\u043d\u0442\u044b
