Proper Undo/Redo

--- a/src/LogisimFX/resources/localization/menu.properties
+++ b/src/LogisimFX/resources/localization/menu.properties
@@ -46,6 +46,10 @@ viewChangeTheme = Change theme
 
 # MenuProject.java
 projectMenu = Project
+projectCantUndoAction = Nothing to undo in project
+projectUndoAction = Undo last action in project %s
+projectCantRedoAction = Nothing to redo in project
+projectRedoAction = Redo last action in project %s
 projectAddCircuitItem = Add Circuit...
 projectLoadLibraryItem = Load Library
 projectLoadBuiltinItem = Built-in Library...
