--- a/src/LogisimFX/resources/localization/menu_ru.properties
+++ b/src/LogisimFX/resources/localization/menu_ru.properties
@@ -42,6 +42,10 @@ viewChangeTheme = Изменить тему
 
 # MenuProject.java
 projectMenu= \u041f\u0440\u043e\u0435\u043a\u0442
+projectCantUndoAction = Нет действий для отмены в проекте
+projectUndoAction = Отменить последнее действие в проекте %s
+projectCantRedoAction = Нет действий для возвращения
+projectRedoAction = Вернуть последнее действие в проекте %s
 projectAddCircuitItem= \u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c \u0441\u0445\u0435\u043c\u0443...
 projectLoadLibraryItem= \u0417\u0430\u0433\u0440\u0443\u0437\u0438\u0442\u044c \u0431\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0443
 projectLoadBuiltinItem= \u0412\u0441\u0442\u0440\u043e\u0435\u043d\u043d\u0430\u044f \u0431\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0430...
