--- a/src/LogisimFX/resources/localization/menu.properties
+++ b/src/LogisimFX/resources/localization/menu.properties
@@ -4,8 +4,10 @@ editCantUndoItemframeTitle=LogisimFX
 editMenu = Edit
 editCantUndoItem = Can't Undo
 editUndoItem = Undo %s
+editUndoItemSimple = Undo
 editCantRedoItem = Can't Redo
 editRedoItem = Redo %s
+editRedoItemSimple = Redo
 editCutItem = Cut
 editCopyItem = Copy
 editPasteItem = Paste
