--- a/src/LogisimFX/resources/localization/imgexport_ru.properties
+++ b/src/LogisimFX/resources/localization/imgexport_ru.properties
@@ -1,25 +1,25 @@
 #
 # gui/ExportImage.java
 #
-labelCircuits= \u0421\u0445\u0435\u043c\u044b:
-labelImageFormat= \u0424\u043e\u0440\u043c\u0430\u0442 \u0438\u0437\u043e\u0431\u0440\u0430\u0436\u0435\u043d\u0438\u044f:
-labelScale= \u041c\u0430\u0441\u0448\u0442\u0430\u0431\u043d\u044b\u0439 \u043a\u043e\u044d\u0444\u0444\u0438\u0446\u0438\u0435\u043d\u0442:
-labelPrinterView= \u0412\u0438\u0434 \u0434\u043b\u044f \u043f\u0435\u0447\u0430\u0442\u0438:
-exportEmptyCircuitsTitle= \u041d\u0435\u0432\u043e\u0437\u043c\u043e\u0436\u043d\u043e \u044d\u043a\u0441\u043f\u043e\u0440\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c
-exportEmptyCircuitsMessage= \u041d\u0435\u0442 \u043d\u0435\u043f\u0443\u0441\u0442\u044b\u0445 \u0441\u0445\u0435\u043c, \u0434\u043e\u0441\u0442\u0443\u043f\u043d\u044b\u0445 \u0434\u043b\u044f \u044d\u043a\u0441\u043f\u043e\u0440\u0442\u0430.
-exportImageSelect= \u042d\u043a\u0441\u043f\u043e\u0440\u0442 \u0438\u0437\u043e\u0431\u0440\u0430\u0436\u0435\u043d\u0438\u044f
-exportImageDirectorySelect= \u0412\u044b\u0431\u043e\u0440 \u043a\u0430\u0442\u0430\u043b\u043e\u0433\u0430 \u0434\u043b\u044f \u044d\u043a\u0441\u043f\u043e\u0440\u0442\u0430
-exportImageFileSelect= \u0412\u044b\u0431\u043e\u0440 \u0444\u0430\u0439\u043b\u0430 \u0434\u043b\u044f \u044d\u043a\u0441\u043f\u043e\u0440\u0442\u0430
-exportImageButton= \u042d\u043a\u0441\u043f\u043e\u0440\u0442
-exportGifFilter= \u0424\u0430\u0439\u043b\u044b GIF (*.gif)
-exportPngFilter= \u0424\u0430\u0439\u043b\u044b PNG (*.png)
-exportJpgFilter= \u0424\u0430\u0439\u043b\u044b JPEG (*.jpeg, *.jpg)
-exportNewDirectoryErrorTitle= \u041d\u0435\u0432\u043e\u0437\u043c\u043e\u0436\u043d\u043e \u0441\u043e\u0437\u0434\u0430\u0442\u044c \u043a\u0430\u0442\u0430\u043b\u043e\u0433
-exportNewDirectoryErrorMessage= \u041a\u0430\u0442\u0430\u043b\u043e\u0433 \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u0441\u043e\u0437\u0434\u0430\u043d.
-couldNotCreateImage= \u0418\u0437\u043e\u0431\u0440\u0430\u0436\u0435\u043d\u0438\u0435 \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u0441\u043e\u0437\u0434\u0430\u043d\u043e.
-couldNotCreateFile= \u0424\u0430\u0439\u043b \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u0441\u043e\u0437\u0434\u0430\u043d.
-confirmOverwriteMessage= \u0424\u0430\u0439\u043b \u0443\u0436\u0435 \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442. \u0425\u043e\u0442\u0438\u0442\u0435 \u043f\u0435\u0440\u0435\u0437\u0430\u043f\u0438\u0441\u0430\u0442\u044c \u0435\u0433\u043e?
-confirmOverwriteTitle= \u041f\u043e\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u0435 \u043f\u0435\u0440\u0435\u0437\u0430\u043f\u0438\u0441\u044c
-exportImageProgress= \u0412\u044b\u0447\u0438\u0441\u043b\u0435\u043d\u0438\u0435 \u0438\u0437\u043e\u0431\u0440\u0430\u0436\u0435\u043d\u0438\u044f...
-exportProgressTitle = \u042D\u043A\u0441\u043F\u043E\u0440\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435 \u0438\u0437\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u0438\u044F...
-exportFileHeader = \u042D\u043A\u0441\u043F\u043E\u0440\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435 %s, \u043F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430 \u043F\u043E\u0434\u043E\u0436\u0434\u0438\u0442\u0435
+labelCircuits= Схемы:
+labelImageFormat= Формат изображения:
+labelScale= Масштабный коэффициент:
+labelPrinterView= Вид для печати:
+exportEmptyCircuitsTitle= Невозможно экспортировать
+exportEmptyCircuitsMessage= Нет непустых схем, доступных для экспорта.
+exportImageSelect= Экспорт изображения
+exportImageDirectorySelect= Выбор каталога для экспорта
+exportImageFileSelect= Выбор файла для экспорта
+exportImageButton= Экспорт
+exportGifFilter= Файлы GIF (*.gif)
+exportPngFilter= Файлы PNG (*.png)
+exportJpgFilter= Файлы JPEG (*.jpeg, *.jpg)
+exportNewDirectoryErrorTitle= Невозможно создать каталог
+exportNewDirectoryErrorMessage= Каталог не может быть создан.
+couldNotCreateImage= Изображение не может быть создано.
+couldNotCreateFile= Файл не может быть создан.
+confirmOverwriteMessage= Файл уже существует. Хотите перезаписать его?
+confirmOverwriteTitle= Подтвердите перезапись
+exportImageProgress= Вычисление изображения...
+exportProgressTitle = Экспортирование изображения...
+exportFileHeader = Экспортирование %s, пожалуйста подождите
