--- a/src/LogisimFX/resources/localization/util_ru.properties
+++ b/src/LogisimFX/resources/localization/util_ru.properties
@@ -1,10 +1,10 @@
 #
 # util/FontUtil.java
 #
-fontPlainStyle= \u041e\u0431\u044b\u0447\u043d\u044b\u0439
-fontBoldStyle= \u041f\u043e\u043b\u0443\u0436\u0438\u0440\u043d\u044b\u0439
-fontItalicStyle= \u041a\u0443\u0440\u0441\u0438\u0432
-fontBoldItalicStyle= \u041f\u043e\u043b\u0443\u0436\u0438\u0440\u043d\u044b\u0439 \u043a\u0443\u0440\u0441\u0438\u0432
+fontPlainStyle= Обычный
+fontBoldStyle= Полужирный
+fontItalicStyle= Курсив
+fontBoldItalicStyle= Полужирный курсив
 #
 # util/InputEventUtil.java
 #
@@ -12,14 +12,14 @@ metaMod= Meta
 altMod= Alt
 ctrlMod= Ctrl
 shiftMod= Shift
-button1Mod= \u041a\u043d\u043e\u043f\u043a\u04301
-button2Mod= \u041a\u043d\u043e\u043f\u043a\u04302
-button3Mod= \u041a\u043d\u043e\u043f\u043a\u04303
+button1Mod= Кнопка1
+button2Mod= Кнопка2
+button3Mod= Кнопка3
 #
 # util/JDialogOk.java
 #
 dlogOkButton= OK
-dlogCancelButton= \u041e\u0442\u043c\u0435\u043d\u0430
+dlogCancelButton= Отмена
 #
 # util/LocaleManager.java
 #
@@ -27,19 +27,19 @@ dlogCancelButton= \u041e\u0442\u043c\u0435\u043d\u0430
 # dialog, the program will replace accented characters based on
 # the slash-delimited character-string pairs in accentReplacements.
 # For example, with German, accentReplacements might be
-# "\u00f6 oe/\u00d6 Oe/\u00fc ue/\u00dc ue/\u00df ss" so that umlauted o's and u's are
+# "ö oe/Ö Oe/ü ue/Ü ue/ß ss" so that umlauted o's and u's are
 # replaced, as would be essets.
 accentReplacements=
 #
 # util/GifEncoder.java
 #
-grabberError= \u0413\u0440\u0430\u0431\u0431\u0435\u0440 \u0432\u043e\u0437\u0432\u0440\u0430\u0442\u0438\u043b "\u043b\u043e\u0436\u044c": 
-manyColorError= \u0421\u043b\u0438\u0448\u043a\u043e\u043c \u043c\u043d\u043e\u0433\u043e \u0446\u0432\u0435\u0442\u043e\u0432.
+grabberError= Граббер возвратил "ложь": 
+manyColorError= Слишком много цветов.
 #
 # util/WindowMenu.java
 #
-windowMenu= \u041e\u043a\u043d\u043e
-windowMinimizeItem= \u041c\u0438\u043d\u0438\u043c\u0438\u0437\u0438\u0440\u043e\u0432\u0430\u0442\u044c
-windowZoomItem= \u041c\u0430\u043a\u0441\u0438\u043c\u0438\u0437\u0438\u0440\u043e\u0432\u0430\u0442\u044c
-windowZoomItemMac= \u041c\u0430\u0441\u0448\u0442\u0430\u0431\u0438\u0440\u043e\u0432\u0430\u0442\u044c
-windowCloseItem= \u0417\u0430\u043a\u0440\u044b\u0442\u044c
+windowMenu= Окно
+windowMinimizeItem= Минимизировать
+windowZoomItem= Максимизировать
+windowZoomItemMac= Масштабировать
+windowCloseItem= Закрыть
