--- a/src/LogisimFX/resources/localization/prefs.properties
+++ b/src/LogisimFX/resources/localization/prefs.properties
@@ -40,6 +40,7 @@ windowToolbarDownMiddle = Down middle
 layoutTitle = Layout
 layoutHelp = Configure behavior of layout editor
 layoutAddShowGhosts = Show ghosts while adding
+layoutAddShowGrid = Show editor grid
 layoutPrinterView = Printer view
 layoutMoveKeepConnect = Keep connections while moving
 layoutAttributeHalo = Show attribute halo
