--- a/src/LogisimFX/resources/localization/prefs_ru.properties
+++ b/src/LogisimFX/resources/localization/prefs_ru.properties
@@ -40,6 +40,7 @@ windowToolbarDownMiddle= Посередине вниз
 layoutTitle= Чертёж
 layoutHelp= Настроить поведение редактора чертежа
 layoutAddShowGhosts= Показывать призраки во время добавления
+layoutAddShowGrid = Показывать сетку редактора
 layoutPrinterView= Вид для печати
 layoutMoveKeepConnect= Сохранять соединения при перемещении
 layoutAttributeHalo= Показывать ореол
