--- a/src/LogisimFX/resources/localization/gui.properties
+++ b/src/LogisimFX/resources/localization/gui.properties
@@ -15,6 +15,9 @@ attributeValueTitle = Value
 canvasWidthError = Incompatible widths
 canvasOscillationError = Oscillation apparent
 canvasExceptionError = Simulation halted by internal error
+canvasX = X=
+canvasY = Y=
+canvasZoom = Zoom=
 #
 # gui/Frame.java
 #
