--- a/src/LogisimFX/resources/localization/gui_ru.properties
+++ b/src/LogisimFX/resources/localization/gui_ru.properties
@@ -15,6 +15,7 @@ attributeValueTitle = Значение
 canvasWidthError= Несовместимые разрядности
 canvasOscillationError= Обнаружено возбуждение
 canvasExceptionError= Моделирование остановлено из-за внутренней ошибки
+canvasZoom = Масштаб=
 #
 # gui/Frame.java
 #
