Fixed attrtable value fields width

--- a/src/LogisimFX/resources/localization/data.properties
+++ b/src/LogisimFX/resources/localization/data.properties
@@ -21,3 +21,6 @@ valueErrorSymbol = E
 valueUnknownSymbol = x
 valueError = Error
 valueUnknown = ???
+
+FPGASupportYes=Supported
+FPGASupportNo=Not supported
