--- a/src/LogisimFX/resources/localization/data_ru.properties
+++ b/src/LogisimFX/resources/localization/data_ru.properties
@@ -21,3 +21,6 @@ valueErrorSymbol= E
 valueUnknownSymbol= x
 valueError= Ошибка
 valueUnknown= ???
+
+FPGASupportYes=Поддерживается
+FPGASupportNo=Не поддерживается
