--- a/src/LogisimFX/resources/localization/std.properties
+++ b/src/LogisimFX/resources/localization/std.properties
@@ -4,6 +4,7 @@
 builtinLibrary = Built-In
 # instance/StdAttr.java
 stdFacingAttr = Facing
+stdFPGASupportAttr=FPGA Supported
 stdDataWidthAttr = Data Bits
 stdTriggerAttr = Trigger
 stdTriggerRising = Rising Edge
