--- a/src/LogisimFX/resources/localization/std_ru.properties
+++ b/src/LogisimFX/resources/localization/std_ru.properties
@@ -4,6 +4,7 @@
 builtinLibrary= Встроенный
 # instance/StdAttr.java
 stdFacingAttr= Направление
+stdFPGASupportAttr=Поддержка ПЛИС
 stdDataWidthAttr= Биты данных
 stdTriggerAttr= Срабатывание
 stdTriggerRising= Передний фронт
