added fpga menu in CustomMenuBar

--- a/src/LogisimFX/resources/localization/menu.properties
+++ b/src/LogisimFX/resources/localization/menu.properties
@@ -160,3 +160,8 @@ analyzerWindowTitle = Combinational Analysis
 preferencesFrameMenuItem = Preferences
 windowZoomItemMac = Zoom
 windowCloseItem = Close
+
+# FPGA
+fpgaMenu=FPGA
+fpgaExportFilesItem=Export verilog files
+fpgaGenerateBitFile=Generate .bit file
