--- a/src/LogisimFX/resources/localization/menu_ru.properties
+++ b/src/LogisimFX/resources/localization/menu_ru.properties
@@ -157,3 +157,7 @@ preferencesFrameMenuItem= Настройки
 analyzerWindowTitle= Комбинационный анализ
 windowCloseItem= Закрыть
 
+# FPGA
+fpgaMenu=ПЛИС
+fpgaExportFilesItem=Экспортировать verilog файлы
+fpgaGenerateBitFile=Сгенерировать .bit файл
