Added zoom+-/ menuitems, Multiple changes to codeEditor

--- a/src/LogisimFX/resources/localization/menu.properties
+++ b/src/LogisimFX/resources/localization/menu.properties
@@ -8,6 +8,8 @@ editUndoItemSimple = Undo
 editCantRedoItem = Can't Redo
 editRedoItem = Redo %s
 editRedoItemSimple = Redo
+editFindItem = Find
+editReplaceItem = Find and Replace
 editCutItem = Cut
 editCopyItem = Copy
 editPasteItem = Paste
@@ -43,6 +45,9 @@ viewToolsTab = Tools
 viewAttrTab = Attributes
 viewWaveformTab = Waveform
 viewChangeTheme = Change theme
+viewZoomIn = Zoom in
+viewZoomOut = Zoom out
+viewZoomDef = To default zoom
 
 
 
