--- a/src/LogisimFX/resources/localization/menu_ru.properties
+++ b/src/LogisimFX/resources/localization/menu_ru.properties
@@ -6,6 +6,8 @@ editUndoItemSimple = Отменить
 editCantRedoItem = Невозможно Вернуть
 editRedoItem = Вернуть %s
 editRedoItemSimple = Вернуть
+editFindItem = Найти
+editReplaceItem = Заменить
 editCutItem= Вырезать
 editCopyItem= Копировать
 editPasteItem= Вставить
@@ -41,6 +43,9 @@ viewToolsTab = Инструменты
 viewAttrTab = Свойства
 viewWaveformTab = Временная диаграмма
 viewChangeTheme = Изменить тему
+viewZoomIn = Увеличить
+viewZoomOut = Уменьшить
+viewZoomDef = К стандартному масштабу
 
 # MenuProject.java
 projectMenu= Проект
