--- a/src/LogisimFX/resources/localization/tools_ru.properties
+++ b/src/LogisimFX/resources/localization/tools_ru.properties
@@ -14,6 +14,7 @@ menuTool= Инструмент Меню
 menuToolDesc= Просматривать меню компонента
 compDeleteItem= Удалить
 compShowAttrItem= Показать атрибуты
+compViewVerilogModel = Показать verilog модель
 selDeleteItem= Удалить выделение
 selCutItem= Вырезать выделение
 selCopyItem= Копировать выделение
