--- a/src/LogisimFX/resources/localization/tools.properties
+++ b/src/LogisimFX/resources/localization/tools.properties
@@ -14,6 +14,7 @@ menuTool = Menu Tool
 menuToolDesc = View component menus
 compDeleteItem = Delete
 compShowAttrItem = Show Attributes
+compViewVerilogModel = View verilog model
 selDeleteItem = Delete Selection
 selCutItem = Cut Selection
 selCopyItem = Copy Selection
