Added access methods for fpga module Added localization for fpga module

--- a/src/LogisimFX/resources/localization/std.properties
+++ b/src/LogisimFX/resources/localization/std.properties
@@ -13,6 +13,11 @@ stdTriggerHigh = High Level
 stdTriggerLow = Low Level
 stdLabelAttr = Label
 stdLabelFontAttr = Label Font
+stdSelectLocAttr = Select Location
+stdSelectBottomLeftOption = Bottom/Left
+stdSelectTopRightOption = Top/Right
+stdLabelCenter = Center
+stdLabelLocAttr = Label Location
 # instance/InstanceTextField.java
 changeLabelAction = Change Label
 #
@@ -39,6 +44,7 @@ extenderInputLabel = input
 clockComponent = Clock
 clockHighAttr = High Duration
 clockLowAttr = Low Duration
+clockPhaseAttr = Phase Offset
 clockDurationValue = %s Ticks
 clockDurationOneValue = 1 Tick
 durationSmallMessage = Value must be at least %s.
@@ -181,6 +187,7 @@ counterQTip      = Output: current value of counter
 counterClockTip  = Clock: value may update on trigger
 counterDataTip   = Data: value to load into counter
 counterLoadTip   = Load: when 1, loads from data input (if Count = 0) or decrements
+counterUpDownTip = Up Down: when 1, counter increments, when 0, counter decrements
 counterEnableTip = Count: when 1, counter increments (or decrements if Load = 1)
 counterResetTip  = Clear: when 1, resets to 0 asynchronously
 counterCarryTip  = Carry: is 1 when value reaches maximum (minimum if decrementing)
@@ -402,6 +409,9 @@ ioLabelColorAttr = Label Color
 ioActiveAttr = Active On High?
 # io/Button.java
 buttonComponent = Button
+buttonPressAttr = Logic level
+buttonPressActive = active on press
+buttonPressPassive = passive on press
 # io/Joystick.java
 joystickComponent = Joystick
 # io/Keyboard.java
@@ -434,6 +444,13 @@ ioInputRow = Rows
 ioInputSelect = Select Rows/Columns
 ioShapeCircle = Circular
 ioShapeSquare = Square
+ioShapePaddedSquare = Padded Square
+ioLedBarComponent = LED Bar
+ioLedBarSegments = Segments
+ioLedBarInput = Input Format
+ioLedBarInputSeparated = Separated
+ioLedBarInputOneWire = One Wire
+
 # io/Tty.java
 ttyComponent = TTY
 ttyDesc = TTY (%s rows, %s cols)
@@ -444,6 +461,25 @@ ttyClearTip = Clear: 1 clears screen
 ttyClockTip = Clock: trigger adds character on input
 ttyEnableTip = Write enable: 0 disables clock
 ttyInputTip = Data: ASCII value of next character to write
+#
+# io/DipSwitch.java
+#
+DIP = DIP
+DipSwitchComponent = DIP Switch
+nrOfSwitch = Number of Switch
+#
+# io/PortIO.java
+#
+pioDirection = Port type:
+pioInput = Inputs only
+pioInputs = Inputs %s
+pioIOMultiple = I/O (per-bit enable)
+pioIOSingle = I/O (single enable)
+pioNumber = Number of pins
+pioOutEnable = Output enable
+pioOutEnables = Output enables %s
+pioOutput = Outputs only
+pioOutputs = Outputs %s
 
 verifierLibrary = Verifiers
 verifier = Verifier
@@ -457,3 +493,5 @@ stdSequenceWidthAttr = Sequence bit depth
 verifierInputTip = Verifier Input
 verifierOutput0Tip = Sequence output
 verifierOutput1Tip = Ready output: the verifier has finished its work
+
+pioComponent = Port I/O
