--- a/src/LogisimFX/resources/localization/std_ru.properties
+++ b/src/LogisimFX/resources/localization/std_ru.properties
@@ -13,6 +13,11 @@ stdTriggerHigh= Высокий уровень
 stdTriggerLow= Низкий уровень
 stdLabelAttr= Метка
 stdLabelFontAttr= Шрифт метки
+stdSelectLocAttr = Положение выбирающего входа
+stdSelectBottomLeftOption = Снизу/слева
+stdSelectTopRightOption = Сверху/справа
+stdLabelCenter = Центр
+stdLabelLocAttr = Местоположение метки
 # instance/InstanceTextField.java
 changeLabelAction= Изменить метку
 #
@@ -39,6 +44,7 @@ extenderInputLabel= input
 clockComponent= Тактовый генератор
 clockHighAttr= Продолжительность единицы
 clockLowAttr= Продолжительность нуля
+clockPhaseAttr = Смещение фазы
 clockDurationValue= %s тактов
 clockDurationOneValue= 1 такт
 durationSmallMessage= Значение должно быть как минимум %s.
@@ -434,6 +440,12 @@ ioInputRow= Строки
 ioInputSelect= Выбор Строки/Столбцы
 ioShapeCircle= Круглая
 ioShapeSquare= Квадратная
+ioShapePaddedSquare = Отдельные квадраты
+ioLedBarComponent = LED панель
+ioLedBarSegments = Кол-во сегментов
+ioLedBarInput = Интерфейс подключения
+ioLedBarInputSeparated = Индивидуальное подключение
+ioLedBarInputOneWire = Общая шина
 # io/Tty.java
 ttyComponent= Терминал
 ttyDesc= Терминал (%s строк, %s столбцов)
@@ -444,6 +456,25 @@ ttyClearTip= Очистка: 1 очищает экран
 ttyClockTip= Тактовый вход: срабатывание добавляет символ на вход
 ttyEnableTip= Разрешение записи: 0 отключает тактовый вход
 ttyInputTip= Данные: ASCII значение следующего символа для записи
+#
+# io/DipSwitch.java
+#
+DIP = ДИП
+DipSwitchComponent = Двухпозиционный переключатель
+nrOfSwitch = Количество переключателей
+#
+# io/PortIO.java
+#
+pioDirection = Направление порта
+pioInput = Вход
+pioInputs = Входы
+pioIOMultiple = Оба направления
+pioIOSingle = Оба направления (один контакт управления выходами)
+pioNumber = Количество контактов
+pioOutEnable = Выход включён
+pioOutEnables = Управление выходами
+pioOutput = Выход
+pioOutputs = Выходы
 
 verifierLibrary = Верификаторы
 verifier = Верификатор
@@ -457,3 +488,9 @@ stdSequenceWidthAttr = Разрядность последовательност
 verifierInputTip = Вход верификатора
 verifierOutput0Tip = Выход последовательности
 verifierOutput1Tip = Ready output: верификатор закончил работу
+counterUpDownTip=counterUpDownTip = Вверх вниз: когда 1, увеличение счетчика, когда 0, уменьшение счетчика
+buttonPressAttr=Логическая 1
+buttonPressActive=1 при нажатии
+buttonPressPassive=1 в покое
+
+pioComponent = Порт I/O
