added toDefaultLayout method updated docklib

--- a/src/LogisimFX/resources/localization/menu.properties
+++ b/src/LogisimFX/resources/localization/menu.properties
@@ -48,7 +48,9 @@ viewChangeTheme = Change theme
 viewZoomIn = Zoom in
 viewZoomOut = Zoom out
 viewZoomDef = To default zoom
-
+viewResetSystemTabs = Reset system tabs
+viewResetWorkspace = Reset workspace
+viewResetLayout = Reset Layout
 
 
 # MenuProject.java
