--- a/src/LogisimFX/resources/localization/menu_ru.properties
+++ b/src/LogisimFX/resources/localization/menu_ru.properties
@@ -46,6 +46,10 @@ viewChangeTheme = Изменить тему
 viewZoomIn = Увеличить
 viewZoomOut = Уменьшить
 viewZoomDef = К стандартному масштабу
+viewResetSystemTabs = К стандартной раскладке вкладок
+viewResetWorkspace = К стандатной раскладке рабочей зоны
+viewResetLayout = К стандартной раскладке
+
 
 # MenuProject.java
 projectMenu= Проект
