Added regex check for labels and circ names

--- a/src/LogisimFX/resources/localization/util.properties
+++ b/src/LogisimFX/resources/localization/util.properties
@@ -27,7 +27,7 @@ dlogCancelButton = Cancel
 # dialog, the program will replace accented characters based on
 # the slash-delimited character-string pairs in accentReplacements.
 # For example, with German, accentReplacements might be
-# "ö oe/Ö Oe/ü ue/Ü ue/ß ss" so that umlauted o's and u's are
+# "ï¿½ oe/ï¿½ Oe/ï¿½ ue/ï¿½ ue/ï¿½ ss" so that umlauted o's and u's are
 # replaced, as would be essets.
 accentReplacements =
 #
@@ -43,3 +43,15 @@ windowMinimizeItem = Minimize
 windowZoomItem = Maximize
 windowZoomItemMac = Zoom
 windowCloseItem = Close
+
+ComponentLabelCollisionError = One component in the circuit has the same label as the component name of the newly placed component. This label has been removed!
+ComponentLabelEqualCircuitName = The specified label is equal to the circuit name, this is not allowed. Please specify another name.
+ComponentLabelNameError = The label correspond to a component name used in the circuit!\n Please use labels that are not equal to component names.
+UsedLabelNameError = There exists already a component with this label!\n Please use unique labels in a circuit.
+
+variableDoubleUnderscore = Error: Detected concatenated "_"-symbols!\n
+variableEndsWithUndescore = Error: Name ends with a "_"-symbol!\n
+variableInvalidCharacters = Error: Detected invalid characters!\n
+variableNameNotAcceptable = Labels and names:\n- have to start with a letter\n- may only contain the characters[a-zA-Z_0-9]\n- may not contain multiple concatenated "_"\n- may not end with an "_"\n- may not be a reserved VHDL keyword\n- may not be a reserved Verilog keyword.
+variableVerilogKeyword = Error: Detected Verilog keyword!\n
+variableVHDLKeyword = Error: Detected VHDL keyword!\n
