--- a/src/LogisimFX/resources/localization/util_ru.properties
+++ b/src/LogisimFX/resources/localization/util_ru.properties
@@ -43,3 +43,15 @@ windowMinimizeItem= Минимизировать
 windowZoomItem= Максимизировать
 windowZoomItemMac= Масштабировать
 windowCloseItem= Закрыть
+
+ComponentLabelCollisionError = Один компонент в схеме имеет ту же метку, что и название компонента для вновь размещенного компонента. Этот ярлык был удален!
+ComponentLabelEqualCircuitName = Указанная метка совпадает с названием схемы. Пожалуйста, укажите другое имя.
+ComponentLabelNameError = Метка соответствует названию компонента, используемого в схеме!\n Пожалуйста, используйте метки, которые не совпадают с названиями компонентов.
+UsedLabelNameError = Уже существует компонент с такой же меткой!\n Используйте уникальные метки.
+
+variableDoubleUnderscore = Ошибка: Обнаружены сопряженные "_"-символы!
+variableEndsWithUndescore = Ошибка: Имя заканчивается символом "_"!
+variableInvalidCharacters = Ошибка: Обнаружены недопустимые символы!
+variableNameNotAcceptable = Метки и имена:\n 1) не должны начинаться с чисел\n 2)может содержать только символы английского алфавита и цифры (для продвинутых [a-zA-Z_0-9]).\n 3)не может содержать нескольких последовательных знаков "_"\n 4)не может заканчиваться символом "_".\n 5)не может быть зарезервированным ключевым словом Verilog
+variableVerilogKeyword = Ошибка: Обнаружено ключевое слово Verilog!
+variableVHDLKeyword = Ошибка: Обнаружено ключевое слово VHDL!
