Fixed localizer unnecessary args

--- a/src/LogisimFX/resources/localization/std.properties
+++ b/src/LogisimFX/resources/localization/std.properties
@@ -425,6 +425,10 @@ keybAvailTip = Available: 1 when buffer contains characters
 keybOutputTip = Data: ASCII value of buffer's front character
 # io/Led.java
 ledComponent = LED
+RGBledComponent = RGB LED
+BLUE = Blue input
+GREEN = Green input
+RED = Red input
 # io/SevenSegment.java
 sevenSegmentComponent = 7-Segment Display
 # io/HexDigit.java
