--- a/src/LogisimFX/resources/localization/std_ru.properties
+++ b/src/LogisimFX/resources/localization/std_ru.properties
@@ -421,6 +421,10 @@ keybAvailTip= Наличие: 1, когда буфер содержит симв
 keybOutputTip= Данные: ASCII значение первого символа буфера
 # io/Led.java
 ledComponent= Светодиод
+RGBledComponent = RGB светодиод
+BLUE = Синий канал
+GREEN = Зеленый канал
+RED = Красный канал
 # io/SevenSegment.java
 sevenSegmentComponent= 7-сегментный индикатор
 # io/HexDigit.java
