--- a/src/LogisimFX/resources/localization/file.properties
+++ b/src/LogisimFX/resources/localization/file.properties
@@ -19,6 +19,11 @@ unloadLibraryAction = Unload Library
 unloadLibrariesAction = Unload Libraries
 setMainCircuitAction = Set Main Circuit
 revertDefaultsAction = Revert To Defaults
+LibLoadErrors = Error loading library:
+LibraryAlreadyLoaded = Library is already loaded or there exists already a library with the same name (case-insensitive).
+LibraryMultipleToolError = Library contains following tool present in the workspace:
+LibraryHasDuplicatedSublibraries = Library contains duplicated sub-libraries:
+LibraryHasDuplicatedTools = Library contains multiple instances of tool:
 #
 # gui/Loader.java
 #
