--- a/src/LogisimFX/resources/localization/file_ru.properties
+++ b/src/LogisimFX/resources/localization/file_ru.properties
@@ -19,6 +19,11 @@ unloadLibraryAction= Выгрузить библиотеку
 unloadLibrariesAction= Выгрузить библиотеки
 setMainCircuitAction= Сделать главной схемой
 revertDefaultsAction= Вернуть по умолчанию
+LibLoadErrors = Ошибка загрузки библиотеки:
+LibraryAlreadyLoaded = Библиотека уже загружена или уже существует библиотека с таким же именем (без учета регистра).
+LibraryMultipleToolError = Библиотека содержит следующий инструмент, присутствующий в рабочей области:
+LibraryHasDuplicatedSublibraries = Библиотека содержит дубликаты подбиблиотек:
+LibraryHasDuplicatedTools = Библиотека содержит несколько экземпляров инструмента:
 #
 # gui/Loader.java
 #
