--- a/src/LogisimFX/resources/localization/gui.properties
+++ b/src/LogisimFX/resources/localization/gui.properties
@@ -104,7 +104,7 @@ statsTotalWith = TOTAL (with subcircuits)
 #
 projectViewToolboxTip = Show project circuits and libraries in explorer pane
 projectViewSimulationTip = Show simulation hierarchy in explorer pane
-projectEditLayoutTip = Edit viewed circuit's layout
+projectEditLayoutTip = Edit viewed circuit's schematics
 projectEditAppearanceTip = Edit viewed circuit's subcircuit appearance
 #
 # gui/main/ToolboxToolbarModel.java
@@ -152,10 +152,12 @@ toolsTab = Tools
 attrTab = Attributes
 waveformTab = Waveform
 
-titleLayoutEditor = LogisimFX layout: %s of %s
-titleAppearanceEditor = LogisimFX appearance: %s of %s
-titleVhdlCodeEditor = LogisimFX vhdl model: %s of %s
-titleVerilogCodeEditor = LogisimFX verilog model: %s of %s
+titleLayoutEditor = LogisimFX - schematics: 
+titleAppearanceEditor = LogisimFX - appearance: 
+titleVhdlCodeEditor = LogisimFX - vhdl model: 
+titleVerilogCodeEditor = LogisimFX - verilog model: 
+titleCodeEditor = LogisimFX - code editor: 
+titleOf = of
 
 dockPinnedItem=Dock pinned
 floatItem=Float
