--- a/src/LogisimFX/resources/localization/gui_ru.properties
+++ b/src/LogisimFX/resources/localization/gui_ru.properties
@@ -150,10 +150,12 @@ toolsTab = Инструменты
 attrTab = Свойства
 waveformTab = Временная диаграмма
 
-titleLayoutEditor = LogisimFX схема: %s из %s
-titleAppearanceEditor = LogisimFX внешний вид: %s из %s
-titleVhdlCodeEditor = LogisimFX vhdl модель: %s из %s
-titleVerilogCodeEditor = LogisimFX verilog модель: %s из %s
+titleLayoutEditor = LogisimFX - схема: 
+titleAppearanceEditor = LogisimFX - внешний вид: 
+titleVhdlCodeEditor = LogisimFX - vhdl модель: 
+titleVerilogCodeEditor = LogisimFX - verilog модель: 
+titleCodeEditor = LogisimFX - редактор кода: 
+titleOf =из
 
 dockPinnedItem=Закрепить вкладку
 floatItem=Открепить вкладку
