--- a/src/LogisimFX/resources/localization/menu.properties
+++ b/src/LogisimFX/resources/localization/menu.properties
@@ -68,9 +68,11 @@ projectUnloadLibraryItem = Unload Library
 projectUnloadLibrariesItem = Unload Libraries...
 projectMoveCircuitDownItem = Move Circuit Down
 projectMoveCircuitUpItem = Move Circuit Up
-projectSetAsMainItem = Set As Main Circuit
+projectSetAsMainItem = Set As TopLevelShell
 projectRemoveCircuitItem = Remove Circuit
-projectEditCircuitLayoutItem = Edit Circuit Layout
+projectEditHLSModel=Edit HLS model
+projectEditTopLevelShell=Edit TopLevelShell
+projectEditCircuitLayoutItem = Edit Circuit Schematics
 projectEditCircuitAppearanceItem = Edit Circuit Appearance
 projectEditVerilogModelItem = Edit Verilog Model
 projectEditVHDLModelItem = Edit VHDL Model
