--- a/src/LogisimFX/resources/localization/menu_ru.properties
+++ b/src/LogisimFX/resources/localization/menu_ru.properties
@@ -66,7 +66,9 @@ projectUnloadLibraryItem= Выгрузить библиотеку
 projectUnloadLibrariesItem= Выгрузить библиотеки...
 projectMoveCircuitDownItem= Переместить схему вниз
 projectMoveCircuitUpItem= Переместить схему вверх
-projectSetAsMainItem= Сделать главной схемой
+projectSetAsMainItem= Сделать TopLevelShell
+projectEditHLSModel=Редактировать HLS описание
+projectEditTopLevelShell=Редактировать TopLevelShell
 projectRemoveCircuitItem= Удалить схему
 projectEditCircuitLayoutItem= Редактировать чертёж схемы
 projectEditCircuitAppearanceItem= Редактировать внешний вид схемы
