Added file for HLS

--- a/src/LogisimFX/resources/localization/gui.properties
+++ b/src/LogisimFX/resources/localization/gui.properties
@@ -176,3 +176,9 @@ codeAreaSelectedTextInfo = chars
 codeAreaIndentInfo = %s spaces
 codeAreaReplaceBtn = Replace
 codeAreaReplaceAllBtn = Replace all
+codeAreaFindBtn = Find
+codeAreaFindAndReplaceBtn = Find and replace
+
+hls = Do high level synthesis
+codeToRTL = Code to schematics
+RTLToCode = Schematics to code
