--- a/src/LogisimFX/resources/localization/gui_ru.properties
+++ b/src/LogisimFX/resources/localization/gui_ru.properties
@@ -175,3 +175,9 @@ codeAreaSelectedTextInfo = символов
 codeAreaIndentInfo = %s пробела
 codeAreaReplaceBtn = Заменить
 codeAreaReplaceAllBtn = Заменить все
+codeAreaFindBtn = Поиск
+codeAreaFindAndReplaceBtn = Поиск и замена
+
+hls = Произвести HLS
+codeToRTL = Код в схему
+RTLToCode = Схема в код
