Added base for terminal tab

--- a/src/LogisimFX/resources/localization/gui.properties
+++ b/src/LogisimFX/resources/localization/gui.properties
@@ -149,8 +149,9 @@ fontSelectorHeader = Select Font
 
 simTab = Simulation
 toolsTab = Tools
-attrTab = Attributes
+attrTab = %s Attributes
 waveformTab = Waveform
+terminalTab = %s Terminal
 
 titleLayoutEditor = LogisimFX - schematics: 
 titleAppearanceEditor = LogisimFX - appearance: 
