--- a/src/LogisimFX/resources/localization/gui_ru.properties
+++ b/src/LogisimFX/resources/localization/gui_ru.properties
@@ -147,8 +147,9 @@ fontSelectorHeader = Выберите шрифт
 
 simTab = Симуляция
 toolsTab = Инструменты
-attrTab = Свойства
+attrTab = %s Свойства
 waveformTab = Временная диаграмма
+terminalTab = %s Терминал
 
 titleLayoutEditor = LogisimFX - схема: 
 titleAppearanceEditor = LogisimFX - внешний вид: 
