--- a/src/LogisimFX/resources/localization/menu.properties
+++ b/src/LogisimFX/resources/localization/menu.properties
@@ -44,6 +44,7 @@ viewSimTab = Simulation
 viewToolsTab = Tools
 viewAttrTab = Attributes
 viewWaveformTab = Waveform
+terminalTab = Terminal
 viewChangeTheme = Change theme
 viewZoomIn = Zoom in
 viewZoomOut = Zoom out
