--- a/src/LogisimFX/resources/localization/menu_ru.properties
+++ b/src/LogisimFX/resources/localization/menu_ru.properties
@@ -42,6 +42,7 @@ viewSimTab = Симуляция
 viewToolsTab = Инструменты
 viewAttrTab = Свойства
 viewWaveformTab = Временная диаграмма
+terminalTab = Терминал
 viewChangeTheme = Изменить тему
 viewZoomIn = Увеличить
 viewZoomOut = Уменьшить
