Added terminal tab for DRC and HLS report. Added promp for workspace Added circ search Fixed ProjectExplorerTreeView bug

--- a/src/LogisimFX/resources/localization/gui.properties
+++ b/src/LogisimFX/resources/localization/gui.properties
@@ -1,3 +1,5 @@
+logisimFX = LogisimFX
+logisimFXTitle = LogisimFX - 
 #
 # gui/AttributeTable.java
 #
@@ -147,17 +149,17 @@ selectionVarious = Selection: Various items \u00D7 %s
 fontSelectorTitle = Font Selector
 fontSelectorHeader = Select Font
 
-simTab = Simulation
-toolsTab = Tools
-attrTab = %s Attributes
-waveformTab = Waveform
-terminalTab = %s Terminal
+simTab = simulation
+toolsTab = tools
+attrTab =  attributes
+waveformTab = waveform
+terminalTab = terminal
 
-titleLayoutEditor = LogisimFX - schematics: 
-titleAppearanceEditor = LogisimFX - appearance: 
-titleVhdlCodeEditor = LogisimFX - vhdl model: 
-titleVerilogCodeEditor = LogisimFX - verilog model: 
-titleCodeEditor = LogisimFX - code editor: 
+titleLayoutEditor = schematics
+titleAppearanceEditor = appearance
+titleVhdlCodeEditor = vhdl model
+titleVerilogCodeEditor = verilog model
+titleCodeEditor = code editor
 titleOf = of
 
 dockPinnedItem=Dock pinned
@@ -183,3 +185,5 @@ codeAreaFindAndReplaceBtn = Find and replace
 hls = Do high level synthesis
 codeToRTL = Code to schematics
 RTLToCode = Schematics to code
+
+searchInProject = search in project
