--- a/src/LogisimFX/resources/localization/gui_ru.properties
+++ b/src/LogisimFX/resources/localization/gui_ru.properties
@@ -141,21 +141,22 @@ toolAttrTitle= Инструмент: %s
 selectionOne= Выделение: %s
 selectionMultiple= Выделение: %s × %s
 selectionVarious= Выделение: Различные элементы × %s
+selectionTitle= выделенные элементы
 
 fontSelectorTitle = Выбор шрифта
 fontSelectorHeader = Выберите шрифт
 
-simTab = Симуляция
-toolsTab = Инструменты
-attrTab = %s Свойства
-waveformTab = Временная диаграмма
-terminalTab = %s Терминал
+simTab = симуляция
+toolsTab = инструменты
+attrTab = свойства
+waveformTab = временная диаграмма
+terminalTab = терминал
 
-titleLayoutEditor = LogisimFX - схема: 
-titleAppearanceEditor = LogisimFX - внешний вид: 
-titleVhdlCodeEditor = LogisimFX - vhdl модель: 
-titleVerilogCodeEditor = LogisimFX - verilog модель: 
-titleCodeEditor = LogisimFX - редактор кода: 
+titleLayoutEditor = схема
+titleAppearanceEditor = внешний вид:
+titleVhdlCodeEditor = vhdl модель
+titleVerilogCodeEditor = verilog модель
+titleCodeEditor = редактор кода:
 titleOf =из
 
 dockPinnedItem=Закрепить вкладку
@@ -182,3 +183,5 @@ codeAreaFindAndReplaceBtn = Поиск и замена
 hls = Произвести HLS
 codeToRTL = Код в схему
 RTLToCode = Схема в код
+
+searchInProject = поиск по проекту
