--- a/src/LogisimFX/resources/localization/draw.properties
+++ b/src/LogisimFX/resources/localization/draw.properties
@@ -40,5 +40,6 @@ actionEditText = Edit Text
 selectionOne = Selection: %s
 selectionMultiple = Selection: %s \u00D7 %s
 selectionVarious = Selection: Various items \u00D7 %s
+selectionTitle = selected items
 
 selectTool = Select Tool
