Project search moved to dialog

--- a/src/LogisimFX/resources/localization/gui.properties
+++ b/src/LogisimFX/resources/localization/gui.properties
@@ -186,4 +186,4 @@ hls = Do high level synthesis
 codeToRTL = Code to schematics
 RTLToCode = Schematics to code
 
-searchInProject = search in project
+searchInProject = Search component in project
