--- a/src/LogisimFX/resources/localization/menu.properties
+++ b/src/LogisimFX/resources/localization/menu.properties
@@ -9,6 +9,7 @@ editCantRedoItem = Can't Redo
 editRedoItem = Redo %s
 editRedoItemSimple = Redo
 editFindItem = Find
+editFindOnProjectItem = Find in project
 editReplaceItem = Find and Replace
 editCutItem = Cut
 editCopyItem = Copy
