--- a/src/LogisimFX/resources/localization/gui_ru.properties
+++ b/src/LogisimFX/resources/localization/gui_ru.properties
@@ -184,4 +184,4 @@ hls = Произвести HLS
 codeToRTL = Код в схему
 RTLToCode = Схема в код
 
-searchInProject = поиск по проекту
+searchInProject = Поиск элемента по проекту
