--- a/src/LogisimFX/resources/localization/menu_ru.properties
+++ b/src/LogisimFX/resources/localization/menu_ru.properties
@@ -7,6 +7,7 @@ editCantRedoItem = Невозможно Вернуть
 editRedoItem = Вернуть %s
 editRedoItemSimple = Вернуть
 editFindItem = Найти
+editFindOnProjectItem = Найти в проекте
 editReplaceItem = Заменить
 editCutItem= Вырезать
 editCopyItem= Копировать
