Added file for .bit generation

--- a/src/LogisimFX/resources/localization/fpga.properties
+++ b/src/LogisimFX/resources/localization/fpga.properties
@@ -379,3 +379,7 @@ VivadoToolPath = Xilinx Vivado toolpath:
 
 chooseBoard=Choose board
 
+boardConstrainsFileNotExist = constrains file doesn't exist
+boardConstrainsFileEmpty = constrains file is empty
+fileGeneratedFromSchematics = %s verilog model generated from schematics
+fileGeneratedFromVerilogModel = %s uses user define verilog model
