--- a/src/LogisimFX/resources/localization/fpga_ru.properties
+++ b/src/LogisimFX/resources/localization/fpga_ru.properties
@@ -354,3 +354,9 @@ softwaresTitle = Программное обеспечение
 VivadoToolPath = Тропа инструментов Силинкс Вивадо:
 
 chooseBoard=Выберите плату
+
+boardConstrainsFileNotExist = файл проектных ограничений не представлен
+boardConstrainsFileEmpty = файл проектных ограничений пуст
+
+fileGeneratedFromSchematics = %s verilog модель сгенерирована из схемы
+fileGeneratedFromVerilogModel = %s использует пользовательскую верилог модель
