--- a/src/LogisimFX/resources/localization/gui.properties
+++ b/src/LogisimFX/resources/localization/gui.properties
@@ -30,6 +30,7 @@ confirmCloseTitle = Confirm Close
 saveOption = Save
 discardOption = Discard
 cancelOption = Cancel
+confirmAction = Confirm Action
 #
 # gui/ExportImage.java
 #
@@ -181,9 +182,12 @@ codeAreaReplaceBtn = Replace
 codeAreaReplaceAllBtn = Replace all
 codeAreaFindBtn = Find
 codeAreaFindAndReplaceBtn = Find and replace
+codeAreaSaveBtn = Save file
+codeAreaDeleteBtn = Clear content
 
 hls = Do high level synthesis
 codeToRTL = Code to schematics
 RTLToCode = Schematics to code
+regenTopLevel = Regen TopLevel
 
 searchInProject = Search component in project
