--- a/src/LogisimFX/resources/localization/gui_ru.properties
+++ b/src/LogisimFX/resources/localization/gui_ru.properties
@@ -26,6 +26,7 @@ confirmCloseTitle= Подтверждение закрытия
 saveOption= Сохранить
 discardOption= Не сохранять
 cancelOption= Отмена
+confirmAction = Подтвердите действие
 #
 # gui/ExportImage.java
 #
@@ -179,9 +180,12 @@ codeAreaReplaceBtn = Заменить
 codeAreaReplaceAllBtn = Заменить все
 codeAreaFindBtn = Поиск
 codeAreaFindAndReplaceBtn = Поиск и замена
+codeAreaSaveBtn = Сохранить файл
+codeAreaDeleteBtn = Очистить содержимое
 
 hls = Произвести HLS
 codeToRTL = Код в схему
 RTLToCode = Схема в код
+regenTopLevel = Сгенерировать TopLevel заново
 
 searchInProject = Поиск элемента по проекту
