Pin tool refactor

--- a/src/LogisimFX/resources/localization/circuit.properties
+++ b/src/LogisimFX/resources/localization/circuit.properties
@@ -36,6 +36,7 @@ radix10Signed = Signed Decimal
 radix10Unsigned = Unsigned Decimal
 radix8 = Octal
 radix16 = Hexadecimal
+radixFloat = Float
 #
 # circuit/SplitterClass.java
 #
