--- a/src/LogisimFX/resources/localization/circuit_ru.properties
+++ b/src/LogisimFX/resources/localization/circuit_ru.properties
@@ -37,6 +37,7 @@ radix10Signed= Знаковое десятичное
 radix10Unsigned= Беззнаковое десятичное
 radix8= Восьмеричное
 radix16= Шестнадцатеричное
+radixFloat = Плавающая запятая
 #
 # circuit/SplitterClass.java
 #
